
[float]
===== Bug fixes

* Fix inconsistencies in HTTP spans from other APM agents.
  <<span-subtype, `span.subtype`>> will now be "http" for HTTP, HTTPS, and
  HTTP/2 outgoing spans -- previously it was "http", "https", "http2",
  respectively. As well, <<span-action, `span.action`>> will now be the HTTP
  method (e.g. "GET", "PUT", "POST"), rather than "http". ({pull}2075[#2075])


[[release-notes-x.x.x]]
==== 3.16.0 - 2021/06/14

[float]
===== Features

* Added <<span-frames-min-duration, `spanFramesMinDuration`>>
  configuration field, allowing users to set a time threshold value that spans
  must reach before the agent will add a stack trace to the span. As a result,
  many short spans that previously included stack traces by default no longer
  will.

* Prefer W3C "traceparent" header over "elastic-apm-traceparent" for incoming
  requests. {pull}2079[#2079]

[float]
===== Bug fixes

* Fix a crash (`TypeError: lastPrepareStackTrace`) in the agent when used with
  React v17 and later ({issues}1980[#1980]).

* Performance improvements have been made in error and stacktrace capture ({pull}2094[#2094]).
  This also included in two bug fixes:
+
** Before this change, some captured errors (for example a `next(new Error('boom')` from
   an Express handler) would mark the error as "unhandled" incorrectly. "Unhandled"
   exceptions are those caught by an `uncaughtException` handler.
** Before this change, source context lines for a stacktrace would not properly
   use the "sourcesContext" field of a file's source map.


[[release-notes-3.15.0]]
==== 3.15.0 - 2021/05/19

[float]
===== Features

* Add support for Node.js v16. (This also drops testing of Node.js v13
  releases.) {pull}2055[#2055]

[float]
===== Bug fixes

* Update TypeScript typings for `Agent.setLabel` and `Agent.addLabels` to
  include the `stringify` argument that was added in v3.11.0.


[[release-notes-3.14.0]]
==== 3.14.0 - 2021/04/19

[float]
===== Features
