@@ -130,11 +130,6 @@ function shouldIgnoreRequest (request, agent) {
     }
   }
 
-  if (!agent.currentTransaction) {
-    agent.logger.trace('no active transaction found, skipping sqs instrumentation')
-    return true
-  }
-
   return false
 }
 
@@ -152,6 +147,10 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
   const action = getActionFromRequest(request)
   const name = getSpanNameFromRequest(request)
   const span = agent.startSpan(name, type, subtype, action)
+  if (!span) {
+    return orig.apply(request, origArguments)
+  }
+
   span.setDestinationContext(getMessageDestinationContextFromRequest(request))
   span.setMessageContext(getMessageContextFromRequest(request))
 
@@ -174,9 +173,7 @@ function instrumentationSqs (orig, origArguments, request, AWS, agent, { version
     }
   })
 
-  const origResult = orig.apply(request, origArguments)
-
-  return origResult
+  return orig.apply(request, origArguments)
 }
 
 module.exports = {
